plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.0'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'com.empresa'
version = '1.0.0'

java {
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

javafx {
	version = '21'

	modules = [
			'javafx.controls',
			'javafx.fxml',
			'javafx.graphics'
	]
}

dependencies {

	// Spring Boot
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// Banco
	runtimeOnly 'com.h2database:h2'

	// CSV
	implementation 'com.opencsv:opencsv:5.8'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// JavaFX
	implementation 'org.openjfx:javafx-controls:21'
	implementation 'org.openjfx:javafx-fxml:21'
	implementation 'org.openjfx:javafx-graphics:21'

	// Testes
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.named("bootJar") {
	archiveFileName = "controle-horas.jar"
}

bootRun {
	jvmArgs = [
			'--add-modules=javafx.controls,javafx.fxml,javafx.graphics'
	]
}